# potcoder

./: LICENSE  README.md  pyproject.toml
src/potcoder/: .env  __init__.py  check-ver.py  cli-help.txt
