[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "potcoder"
authors = [{name = "Thai Minh Nguyen", email = "nguyenthaiminh0973200965@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/thaiminhnguyen1999/potcoder"
